--- a/整理的有用博客.md
+++ b/整理的有用博客.md
@@ -1,15 +1,11 @@
-### 知乎
+## 知乎
 
 - [（六）SLAM 建图与自主避障导航 ——3.ros-navigation 机器人自主避障导航](https://zhuanlan.zhihu.com/p/64836459)
 - [ros navigation stack 源码学习](https://zhuanlan.zhihu.com/ros-nav)
 - [当使用视觉 SLAM 对一个环境建图之后，如何让机器人能够 “理解” 地图并导航呢？](https://www.zhihu.com/question/56674827)
 - [软件篇 - 04-OMPL 和 FCL 用于 SLAM 轨迹规划](https://zhuanlan.zhihu.com/p/139851304)
 
-
-
-
-
-### CSDN
+## CSDN
 
 - [ROS 学习篇（八）机器人的导航功能－－navigation](https://blog.csdn.net/Tansir94/article/details/83720740)
 - [octomap 中 3d-rrt 路径规划](https://blog.csdn.net/hankerbit/article/details/81117572)
@@ -20,15 +16,18 @@
 - [ROS 与 GAZEBO 实时硬件仿真（1）——urdf 的编写](https://blog.csdn.net/wubaobao1993/article/details/80947968)
 - [ros-semantic-mapper 语义地图开源 ROS 包调试](https://blog.csdn.net/qintianhaohao/article/details/81349210)
 
-
-
-### 博客园
+## 博客园
 
 - [octomap 中 3d-rrt 路径规划](https://www.cnblogs.com/shhu1993/p/7062099.html?utm_source=debugrun&utm_medium=referral)
 
+## ROS
 
+### ROS 基础
 
-### ROS
+- [ROS 教程之 navigation ：在 catkin 环境下创建 costmap layer plugin](https://blog.csdn.net/heyijia0327/article/details/42241831)
+- [Creating a New Layer]([http://wiki.ros.org/costmap_2d/Tutorials/Creating%20a%20New%20Layer](http://wiki.ros.org/costmap_2d/Tutorials/Creating a New Layer))
+
+### ROS Octomap 导航
 
 - [navigation](http://wiki.ros.org/action/fullsearch/navigation?action=fullsearch&context=180&value=linkto%3A"navigation")
 - [Navigation of mobile robot in 3d map](https://answers.ros.org/question/256957/navigation-of-mobile-robot-in-3d-map/)
@@ -41,22 +40,22 @@
 - [Can Turtlebot2 directly use Octomap to navigate?](https://answers.ros.org/question/246368/can-turtlebot2-directly-use-octomap-to-navigate/)
 - [2D map from Octomap](https://answers.ros.org/question/12995/2d-map-from-octomap/)
 
+### ros-navigation 配置教程
 
+- [在 STDR 中配置 Planner 路径规划器参数](https://www.corvin.cn/858.html)
 
-### Github
+## Github
 
 - [indires_navigation](https://github.com/noeperez/indires_navigation)
 - [scoutrobot](https://github.com/abelmeadows/scoutrobot)
 - [ORB-SLAM-RGBD-with-Octomap](https://github.com/xiaoxifuhongse/ORB-SLAM-RGBD-with-Octomap)
 
-### 古月居
+## 古月居
 
 - [SLAM 建图与自主避障导航 ——3.ros-navigation 机器人自主避障导航](https://www.guyuehome.com/8063)
 - [ROS 探索总结（四十）——dynamic reconfigure](https://www.guyuehome.com/1173)
 
-
-
-### 个人博客
+## 个人博客
 
 - [ROS 中级一 配置并使用 ROS 导航功能包集](http://stevenshi.me/2017/07/10/ros-intermediate-tutorial-1/)
 - [ROS - 机器人导航](http://www.chenjianqu.com/show-120.html)
@@ -64,18 +63,14 @@
 - [点云地图的二维投影](http://www.chenjianqu.com/show-118.html)
 - [无人机自动驾驶软件系列 E04 ： 深度估计，八叉树地图以及路径规划](https://gaas.gitbook.io/guide/software-realization-build-your-own-autonomous-drone/wu-ren-ji-zi-dong-jia-shi-xi-lie-part-4-shen-du-gu-ji-ba-cha-shu-di-tu-yi-ji-lu-jing-gui-hua)
 
-
-
-### Youtube
+## Youtube
 
 - [point cloud- octomap -navigation](https://www.youtube.com/watch?v=DTtG_usQyZo)
 - [UAV Autonomous Navigation , 2D and 3D Mapping in ROS using Gazebo, Rviz, Hector SLAM and Octomap](https://www.youtube.com/watch?v=TtUblDNscnA)
 - [Robotics Weekends #3 - CbBot. Test of SLAM: Gmapping, Google Cartographer, Octomap](https://www.youtube.com/watch?v=EU6X1AYEksc)
 - [RRT based path planning with Octomap - YouTube](https://www.youtube.com/watch?v=lTLWTBVJb_E)
 
-
-
-### Gazebo 仿真
+## Gazebo 仿真
 
 - [gazebo 入门教程（一） 安装，UI 介绍](https://blog.csdn.net/weixin_41045354/article/details/84881498)
 - [Gazebo Tutorials](http://gazebosim.org/tutorials)
@@ -87,15 +82,11 @@
 - [【ROS-Gazebo】SDF 与 URDF 的相互转换](https://www.guyuehome.com/7117)
 - [使用 Gazebo 的 GUI 创建机器人]([https://gaoyichao.com/Xiaotu/?book=ros&title=%E4%BD%BF%E7%94%A8Gazebo%E7%9A%84GUI%E5%88%9B%E5%BB%BA%E6%9C%BA%E5%99%A8%E4%BA%BA](https://gaoyichao.com/Xiaotu/?book=ros&title=使用Gazebo的GUI创建机器人))
 
-
-
-### 语义 SLAM
+## 语义 SLAM
 
 - [语义 SLAM 开源代码汇总](https://zhuanlan.zhihu.com/p/64825421)
 
-
-
-### Navigation 源码解析
+## Navigation 源码解析
 
 - https://my.oschina.net/u/4256916/blog/3311726
 - https://www.guyuehome.com/270
@@ -106,26 +97,20 @@
 - https://zhuanlan.zhihu.com/ros-nav
 - http://hefvcjm.com/2019/07/14/move_base_leaning_firework_1/
 
-
-
-### 路径规划入门
+## 路径规划入门
 
 - https://zhuanlan.zhihu.com/p/51372134
 - https://blog.csdn.net/gwplovekimi/article/details/104629629
 
-
-
-### 占据栅格地图
+## 占据栅格地图
 
 - https://zhuanlan.zhihu.com/p/21738718
 
-
-
-### Octomap 路径规划器
+## Octomap 路径规划器
 
 - https://github.com/fferri/octomap_path_planner
 
-### Octomap 转 2D 栅格地图
+## Octomap 转 2D 栅格地图
 
 - https://github.com/ANYbotics/grid_map/blob/master/grid_map_octomap/src/GridMapOctomapConverter.cpp
 - http://www.chenjianqu.com/show-118.html
